--- a/app/src/main/res/color/color_bottom_navigation.xml
+++ b/app/src/main/res/color/color_bottom_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:color="#000" android:state_checked="true"/>
-<item android:color="#7A7979" android:state_checked="false"/>
+<item android:color="@color/color1" android:state_checked="true"/>
+<item android:color="#88909C" android:state_checked="false"/>
 </selector>
