--- a/app/src/main/res/layout/item_mybook.xml
+++ b/app/src/main/res/layout/item_mybook.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/author_name"
-        android:text="Adsfgdgsdggg"
+        android:text="John Karter"
         android:textStyle="bold"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="@id/card"
