--- a/app/src/main/res/drawable/ic_right_arrow_svgrepo_com.xml
+++ b/app/src/main/res/drawable/ic_right_arrow_svgrepo_com.xml
@@ -2,6 +2,6 @@
     android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M10,7L15,12L10,17"
-        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeColor="#03A9F4" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1.5"/>
 </vector>
