--- a/app/src/main/res/layout/item_inner_list_books.xml
+++ b/app/src/main/res/layout/item_inner_list_books.xml
@@ -10,8 +10,9 @@
         android:id="@+id/category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:text="Category Name"
         android:textColor="#000"
         android:textSize="18dp"
@@ -22,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/category_name">
@@ -34,9 +35,9 @@
             android:background="?android:selectableItemBackground"
             android:drawableEnd="@drawable/ic_right_arrow_svgrepo_com"
             android:gravity="center"
-            android:paddingStart="10dp"
+            android:paddingStart="12dp"
             android:text="Hammasi"
-            android:textColor="#000"
+            android:textColor="#2196F3"
             android:textSize="16dp" />
     </androidx.cardview.widget.CardView>
 
@@ -44,7 +45,7 @@
         android:id="@+id/rv_list_inner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="12dp"
         android:layout_marginStart="5dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
