--- a/app/src/main/res/layout/item_mybook.xml
+++ b/app/src/main/res/layout/item_mybook.xml
@@ -1,71 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:background="@drawable/bg_my_book"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="8dp"
+    android:background="@drawable/bg_my_book">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="20dp"
-        app:cardBackgroundColor="@color/black"
         android:layout_width="130dp"
-        android:layout_height="160dp">
+        android:layout_height="160dp"
+        android:layout_marginTop="8dp"
+        app:cardBackgroundColor="@color/black"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/book_picture"
-            android:src="@drawable/hacker_crackdown"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:src="@drawable/hacker_crackdown" />
 
     </androidx.cardview.widget.CardView>
+
     <TextView
-        android:layout_marginHorizontal="4dp"
         android:id="@+id/book_name"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintEnd_toEndOf="@id/card"
-        app:layout_constraintTop_toBottomOf="@id/card"
-        android:text="Rich Dad And Poor DaD"
-        android:textStyle="bold"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="4dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="Rich Dad And Poor DaD"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/card"
+        app:layout_constraintStart_toStartOf="@id/card"
+        app:layout_constraintTop_toBottomOf="@id/card" />
+
     <TextView
         android:id="@+id/author_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="John Karter"
-        android:textStyle="bold"
         android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintEnd_toEndOf="@id/card"
-        app:layout_constraintTop_toBottomOf="@id/book_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:paddingBottom="4dp"
-        android:paddingTop="4dp"
-        android:id="@+id/audio_book"
-        android:padding="4dp"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintTop_toBottomOf="@id/author_name"
-        android:src="@drawable/audio_book"
-        android:layout_width="40dp"
-        android:layout_height="40dp"/>
-    <TextView
-        android:id="@+id/audio_book_text"
         android:textStyle="bold"
-        android:text="Audio Book"
-        app:layout_constraintTop_toTopOf="@id/audio_book"
-        app:layout_constraintBottom_toBottomOf="@id/audio_book"
-        app:layout_constraintStart_toEndOf="@id/audio_book"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
+        app:layout_constraintEnd_toEndOf="@id/card"
+        app:layout_constraintStart_toStartOf="@id/card"
+        app:layout_constraintTop_toBottomOf="@id/book_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
