--- a/app/src/main/res/layout/item_mybook.xml
+++ b/app/src/main/res/layout/item_mybook.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="180dp"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:background="@drawable/bg_my_book">
+    android:paddingVertical="16dp"
+    android:layout_marginHorizontal="16dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
@@ -27,13 +26,16 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:fontFamily="@font/nunito"
         android:id="@+id/book_name"
+        android:gravity="center"
+        android:paddingTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="4dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="Rich Dad And Poor DaD"
+        android:text="Rich Dad And Poor Dad"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/card"
@@ -41,6 +43,7 @@
         app:layout_constraintTop_toBottomOf="@id/card" />
 
     <TextView
+        android:gravity="center"
         android:id="@+id/author_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
