--- a/app/src/main/res/layout/page_intro.xml
+++ b/app/src/main/res/layout/page_intro.xml
@@ -9,14 +9,25 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:src="@drawable/intro1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/start"/>
 
+    <Button
+        android:id="@+id/start"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:text="Start"
+        android:backgroundTint="#0CD7EA"
+        android:layout_marginBottom="96dp"
+        android:textSize="22dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
