--- a/app/src/main/res/layout/item_mybook.xml
+++ b/app/src/main/res/layout/item_mybook.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
-    app:cardBackgroundColor="@color/app_bg_color"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -41,7 +41,7 @@
             android:fontFamily="@font/roboto_medium"
             android:maxLines="2"
             android:text="O'tkan kunlar (Audio kitob)"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:textSize="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
