--- a/app/src/main/res/layout/screen_audio_book.xml
+++ b/app/src/main/res/layout/screen_audio_book.xml
@@ -1,6 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FDE5CA">
+
+    <ImageView
+        android:scaleType="centerCrop"
+        android:id="@+id/book_image"
+        android:src="@drawable/audio"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"/>
+
+    <TextView
+        android:layout_marginTop="16dp"
+        android:id="@+id/music_name"
+        app:layout_constraintTop_toBottomOf="@id/book_image"
+        android:textColor="#2d7b9f"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:text="Nima gap bro"
+        app:layout_constraintStart_toStartOf="@id/book_image"
+        app:layout_constraintEnd_toEndOf="@id/book_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/square_btn"
+        app:layout_constraintStart_toStartOf="@id/book_image"
+        app:layout_constraintTop_toTopOf="@id/play_btn"
+        app:layout_constraintBottom_toBottomOf="@id/play_btn"
+        android:layout_marginStart="24dp"
+        android:src="@drawable/square"
+        android:layout_width="38dp"
+        android:layout_height="38dp"/>
+
+    <ImageView
+        android:id="@+id/play_btn"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/music_name"
+        android:src="@drawable/play_button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
+
+    <ImageView
+        android:id="@+id/pause_btn"
+        app:layout_constraintEnd_toEndOf="@id/book_image"
+        app:layout_constraintTop_toTopOf="@id/play_btn"
+        app:layout_constraintBottom_toBottomOf="@id/play_btn"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/pause"
+        android:layout_width="40dp"
+        android:layout_height="40dp"/>
+
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="32dp"
+        android:maxHeight="8dp"
+        android:minWidth="8dp"
+        android:progressTint="#ff9240"
+        android:thumbTint="#3f778b"
+        app:layout_constraintEnd_toEndOf="@id/book_image"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/book_image"
+        app:layout_constraintTop_toBottomOf="@id/pause_btn" />
+    <TextView
+        android:id="@+id/start_time_text"
+        android:textColor="#2d7b9f"
+        android:layout_marginTop="4dp"
+        android:text="0:00"
+        android:textSize="16sp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintTop_toBottomOf="@id/seek_bar"
+        app:layout_constraintStart_toStartOf="@id/book_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/max_time_text"
+        android:textColor="#2d7b9f"
+        android:layout_marginTop="4dp"
+        android:text="0:00"
+        android:textSize="16sp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintTop_toBottomOf="@id/seek_bar"
+        app:layout_constraintEnd_toEndOf="@id/book_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
