--- a/app/src/main/res/layout/screen_intro.xml
+++ b/app/src/main/res/layout/screen_intro.xml
@@ -27,4 +27,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="45dp"
         />
+
+    <Button
+        android:id="@+id/start"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:text="Start"
+        android:backgroundTint="#0CD7EA"
+        android:layout_marginBottom="96dp"
+        android:textSize="22dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
