--- a/app/src/main/res/layout/screen_detail.xml
+++ b/app/src/main/res/layout/screen_detail.xml
@@ -9,6 +9,7 @@
         android:background="@color/white"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/back"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="36dp"
@@ -28,6 +29,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/img"
                 android:layout_width="200dp"
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
@@ -35,7 +37,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -48,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/autor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -56,24 +58,24 @@
             android:textColor="#7E7D7D"
             android:textSize="20dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/appCompatButton"
+            android:id="@+id/download"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="56dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/blue_button_background"
-            android:text="O'qish"
+            android:text="Yuklash"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18dp"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/autor" />
 
         <TextView
             android:id="@+id/text3"
@@ -87,8 +89,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginStart="32dp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />
+            app:layout_constraintTop_toBottomOf="@+id/download" />
         <TextView
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -98,5 +101,25 @@
             app:layout_constraintStart_toStartOf="parent"
             android:maxWidth="300dp"
             app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/progres"
+            app:layout_constraintBottom_toTopOf="@id/seek_bar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="8dp"
+            android:textSize="12dp"
+            android:text="100%"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:progressDrawable="@drawable/seek_bar_style"
+            app:layout_constraintTop_toTopOf="@id/download"
+            app:layout_constraintBottom_toBottomOf="@id/download"
+            android:layout_marginHorizontal="64dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:thumb="@drawable/car"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
