--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -27,8 +27,8 @@
         android:name="uz.developers.asaxiybooks.presenter.screen.HomeScreen"
         android:label="HomeScreen" >
         <action
-            android:id="@+id/action_homeScreen_to_readBookScreen"
-            app:destination="@id/readBookScreen" />
+            android:id="@+id/action_homeScreen_to_bookDetailScreen"
+            app:destination="@id/bookDetailScreen" />
     </fragment>
     <fragment
         tools:layout="@layout/screen_intro"
@@ -45,6 +45,17 @@
         android:id="@+id/readBookScreen"
         android:name="uz.developers.asaxiybooks.presenter.screen.ReadBookScreen"
         android:label="ReadBookScreen" >
+        <argument
+            android:name="book"
+            app:argType="uz.developers.asaxiybooks.data.model.MyBooksData" />
+    </fragment>
+    <fragment
+        android:id="@+id/bookDetailScreen"
+        android:name="uz.developers.asaxiybooks.presenter.screen.BookDetailScreen"
+        android:label="BookDetailScreen" >
+        <action
+            android:id="@+id/action_bookDetailScreen_to_readBookScreen"
+            app:destination="@id/readBookScreen" />
         <argument
             android:name="book"
             app:argType="uz.developers.asaxiybooks.data.model.MyBooksData" />
