--- a/app/src/main/res/layout/item_inner_list_books.xml
+++ b/app/src/main/res/layout/item_inner_list_books.xml
@@ -54,5 +54,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/category_name"
         tools:itemCount="10"
-        tools:listitem="@layout/item_mybook" />
+        tools:listitem="@layout/item_library_book" />
 </androidx.constraintlayout.widget.ConstraintLayout>
