--- a/app/src/main/res/layout/item_library_book.xml
+++ b/app/src/main/res/layout/item_library_book.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
@@ -41,6 +41,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/nunito"
             android:maxLines="2"
+            android:minLines="2"
             android:text="O'tkan kunlar (Audio kitob)"
             android:textColor="#000"
             android:textSize="20dp"
