--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color1">#1F75C3</color>
     <color name="app_bg_color">#0F172B</color>
+    <color name="light_gray">#E0E0E0</color>
+    <color name="dark_gray">#9E9E9E</color>
+    <color name="button_normal">#2196F3</color>
+    <color name="button_pressed">#1976D2</color>
+    <color name="button_focused">#64B5F6</color>
+
 </resources>
