--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -35,12 +35,12 @@
         <action
             android:id="@+id/action_homeScreen_to_bookDetailScreen"
             app:destination="@id/bookDetailScreen" />
-        <action
-            android:id="@+id/action_homeScreen_to_bookDetailScreen"
-            app:destination="@id/bookDetailScreen" />
         <argument
             android:name="book"
             app:argType="uz.developers.asaxiybooks.data.model.MyBooksData" />
+        <action
+            android:id="@+id/action_homeScreen_to_musicDetalScreen"
+            app:destination="@id/musicDetalScreen" />
     </fragment>
     <fragment
         tools:layout="@layout/screen_intro"
@@ -56,17 +56,6 @@
         android:id="@+id/readBookScreen"
         android:name="uz.developers.asaxiybooks.presenter.screen.ReadBookScreen"
         android:label="ReadBookScreen" >
-        <argument
-            android:name="book"
-            app:argType="uz.developers.asaxiybooks.data.model.MyBooksData" />
-    </fragment>
-    <fragment
-        android:id="@+id/bookDetailScreen"
-        android:name="uz.developers.asaxiybooks.presenter.screen.BookDetailScreen"
-        android:label="BookDetailScreen" >
-        <action
-            android:id="@+id/action_bookDetailScreen_to_readBookScreen"
-            app:destination="@id/readBookScreen" />
         <argument
             android:name="book"
             app:argType="uz.developers.asaxiybooks.data.model.MyBooksData" />
@@ -105,5 +94,17 @@
         <action
             android:id="@+id/action_signUpScreen_to_loginScreen"
             app:destination="@id/loginScreen" />
+    </fragment>
+    <fragment
+        android:id="@+id/audioBookScreen"
+        android:name="uz.developers.asaxiybooks.presenter.screen.AudioBookScreen"
+        android:label="AudioBookScreen" />
+    <fragment
+        android:id="@+id/musicDetalScreen"
+        android:name="uz.developers.asaxiybooks.presenter.screen.MusicDetalScreen"
+        android:label="MusicDetalScreen" >
+        <action
+            android:id="@+id/action_musicDetalScreen_to_audioBookScreen"
+            app:destination="@id/audioBookScreen" />
     </fragment>
 </navigation>
