--- a/app/src/main/res/layout/screen_detail.xml
+++ b/app/src/main/res/layout/screen_detail.xml
@@ -37,6 +37,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:gravity="center"
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
