--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -60,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="8dp"
-        android:src="@drawable/books"
+        android:src="@drawable/books2"
         android:layout_width="32dp"
         android:layout_height="30dp"/>
 
