--- a/app/src/main/res/layout/screen_music_detal.xml
+++ b/app/src/main/res/layout/screen_music_detal.xml
@@ -65,7 +65,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/download"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginHorizontal="56dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/blue_button_background"
@@ -121,5 +121,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:thumb="@drawable/car"/>
+        <View
+            android:visibility="invisible"
+            android:id="@+id/progres_bth"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="56dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/blue_button_background"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/autor" />
+        <ProgressBar
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="@id/download"
+            app:layout_constraintBottom_toBottomOf="@id/download"
+            app:layout_constraintLeft_toLeftOf="@id/download"
+            app:layout_constraintRight_toRightOf="@id/download"
+            android:id="@+id/progressBar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
