--- a/app/src/main/res/layout/item_mybook.xml
+++ b/app/src/main/res/layout/item_mybook.xml
@@ -54,13 +54,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
+            android:maxLines="1"
             android:padding="4dp"
             android:text="Abdulla Qodiriy"
             android:textColor="#59688F"
             android:textSize="17dp"
             android:layout_marginVertical="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/type_img"
             app:layout_constraintLeft_toLeftOf="@id/book_name"
             app:layout_constraintTop_toBottomOf="@id/book_name" />
+        <ImageView
+            android:id="@+id/type_img"
+            app:layout_constraintTop_toBottomOf="@id/book_author"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/book_author"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/headphones"
+            android:backgroundTint="#E68E08"
+            android:layout_marginBottom="8dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
+        <TextView
+            android:id="@+id/type_text"
+            app:layout_constraintLeft_toRightOf="@id/type_img"
+            app:layout_constraintTop_toTopOf="@id/type_img"
+            app:layout_constraintBottom_toBottomOf="@id/type_img"
+            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:layout_marginStart="8dp"
+            android:text="(Audio kitob)"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
