--- a/app/src/main/res/layout/screen_audio_book.xml
+++ b/app/src/main/res/layout/screen_audio_book.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FDE5CA">
+    android:background="#fff">
 
     <ImageView
         android:id="@+id/book_image"
@@ -29,15 +30,6 @@
         app:layout_constraintEnd_toEndOf="@id/book_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <ImageView
-        android:id="@+id/square_btn"
-        app:layout_constraintStart_toStartOf="@id/book_image"
-        app:layout_constraintTop_toTopOf="@id/play_btn"
-        app:layout_constraintBottom_toBottomOf="@id/play_btn"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/square"
-        android:layout_width="38dp"
-        android:layout_height="38dp"/>
 
     <ImageView
         android:id="@+id/play_btn"
@@ -49,22 +41,11 @@
         android:layout_width="80dp"
         android:layout_height="80dp"/>
 
-    <ImageView
-        android:id="@+id/pause_btn"
-        app:layout_constraintEnd_toEndOf="@id/book_image"
-        app:layout_constraintTop_toTopOf="@id/play_btn"
-        app:layout_constraintBottom_toBottomOf="@id/play_btn"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/pause"
-        android:layout_width="40dp"
-        android:layout_height="40dp"/>
-
     <SeekBar
         android:id="@+id/seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="32dp"
         android:maxHeight="8dp"
         android:minWidth="8dp"
         android:progressTint="#ff9240"
@@ -72,7 +53,8 @@
         app:layout_constraintEnd_toEndOf="@id/book_image"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@id/book_image"
-        app:layout_constraintTop_toBottomOf="@id/pause_btn" />
+        tools:layout_editor_absoluteY="505dp"
+        tools:ignore="MissingConstraints" />
     <TextView
         android:id="@+id/start_time_text"
         android:textColor="#2d7b9f"
