--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -46,6 +46,9 @@
             app:destination="@id/loginScreen"
             app:popUpTo="@id/homeScreen"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_homeScreen_to_allBookScreen"
+            app:destination="@id/allBookScreen" />
     </fragment>
     <fragment
         tools:layout="@layout/screen_intro"
@@ -103,6 +106,7 @@
         <action
             android:id="@+id/action_signUpScreen_to_loginScreen"
             app:destination="@id/loginScreen" />
+
     </fragment>
     <fragment
         android:id="@+id/audioBookScreen"
@@ -122,5 +126,13 @@
         <action
             android:id="@+id/action_musicDetalScreen_to_audioBookScreen"
             app:destination="@id/audioBookScreen" />
+    </fragment>
+    <fragment
+        android:id="@+id/allBookScreen"
+        android:name="uz.developers.asaxiybooks.presenter.screen.AllBookScreen"
+        android:label="AllBookScreen">
+        <argument
+            android:name="category"
+            app:argType="uz.developers.asaxiybooks.data.model.CategoryBooksData" />
     </fragment>
 </navigation>
