--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -20,6 +20,7 @@
         android:layout_marginBottom="16dp"/>
     <TextView
         app:layout_constraintTop_toTopOf="@id/book_image"
+        app:layout_constraintBottom_toTopOf="@id/author_name"
         android:id="@+id/book_name"
         android:textStyle="bold"
         android:maxWidth="150sp"
@@ -31,11 +32,10 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/book_price"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="18sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/book_image"
-        app:layout_constraintStart_toEndOf="@id/book_name"
+        app:layout_constraintTop_toBottomOf="@id/author_name"
+        app:layout_constraintStart_toEndOf="@id/book_image"
+        app:layout_constraintBottom_toBottomOf="@id/book_image"
         android:textColor="#0587EB"
         android:textStyle="bold"
         android:text="19 990 so'm"
@@ -45,6 +45,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@id/book_image"
         app:layout_constraintTop_toBottomOf="@id/book_name"
+        app:layout_constraintBottom_toTopOf="@id/book_price"
         android:id="@+id/author_name"
         android:textColor="@color/black"
         android:textSize="14sp"
