--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -29,18 +29,21 @@
         app:layout_constraintStart_toEndOf="@id/book_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/book_price"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="18sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/book_image"
-        app:layout_constraintStart_toEndOf="@id/book_name"
-        android:textColor="#0587EB"
-        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="180dp"
         android:text="19 990 so'm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="#0587EB"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/author_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/author_name"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@id/book_image"
