--- a/app/src/main/res/layout/screen_singup.xml
+++ b/app/src/main/res/layout/screen_singup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#0E1629">
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="22sp"
             app:layout_constraintTop_toBottomOf="@id/image"
             android:text="Welcome to Asaxiy Books"
@@ -36,7 +36,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:id="@+id/login_text"
             android:text="Sign Up"
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             app:layout_constraintTop_toBottomOf="@id/login_text"
             android:id="@+id/gmail_text"
             android:text="Enter FirstName"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -60,7 +60,9 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/edit_text_bg"
-            android:hint="  First Name"
+            android:paddingStart="16dp"
+            android:backgroundTint="#EAEAEA"
+            android:hint="First Name"
             android:maxLength="15"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +75,7 @@
             app:layout_constraintStart_toStartOf="@id/lastName_edit_text"
             app:layout_constraintTop_toBottomOf="@id/firstName_edit_text"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Enter LastName"
             android:id="@+id/password_text"
             android:layout_width="wrap_content"
@@ -87,7 +89,9 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/edit_text_bg"
-            android:hint="  Last Name"
+            android:paddingStart="16dp"
+            android:backgroundTint="#EAEAEA"
+            android:hint="Last Name"
             android:maxLength="25"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +105,7 @@
             app:layout_constraintTop_toBottomOf="@id/lastName_edit_text"
             android:textSize="16sp"
             android:id="@+id/text_gmail"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Enter gmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -113,7 +117,9 @@
             android:layout_height="55dp"
             android:layout_marginHorizontal="24dp"
             android:background="@drawable/edit_text_bg"
-            android:hint="  example@gmail.com"
+            android:paddingStart="16dp"
+            android:backgroundTint="#EAEAEA"
+            android:hint="example@gmail.com"
             android:maxLength="30"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +133,7 @@
             app:layout_constraintTop_toBottomOf="@id/edit_gmail_text"
             android:textSize="16sp"
             android:id="@+id/text_password"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Enter password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -140,7 +146,9 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/edit_text_bg"
-            android:hint="  password"
+            android:paddingStart="16dp"
+            android:backgroundTint="#EAEAEA"
+            android:hint="password"
             android:maxLength="15"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +177,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Already have an account?"
-            android:textColor="#FFFFFF"
+            android:textColor="#000"
             app:layout_constraintEnd_toEndOf="@+id/save_btn"
             app:layout_constraintHorizontal_bias="0.36"
             app:layout_constraintStart_toStartOf="@id/save_btn"
