--- a/app/src/main/res/layout/screen_login.xml
+++ b/app/src/main/res/layout/screen_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#0E1629">
+    android:background="@color/white">
     <ImageView
         android:layout_marginTop="24dp"
         android:id="@+id/image"
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@id/image"
         android:text="Welcome to Asaxiy Books"
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="16sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:id="@+id/login_text"
         android:text="Log In"
         android:layout_width="wrap_content"
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@id/login_text"
         android:id="@+id/gmail_text"
         android:text="Enter gmail"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -54,9 +54,11 @@
         android:id="@+id/email_edit_text"
         android:layout_width="match_parent"
         android:layout_height="55dp"
+        android:paddingStart="16dp"
         android:layout_marginHorizontal="24dp"
         android:background="@drawable/edit_text_bg"
-        android:hint="  example@gmail.com"
+        android:backgroundTint="#EAEAEA"
+        android:hint="example@gmail.com"
         android:maxLength="30"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/gmail_text"
@@ -67,7 +69,7 @@
         app:layout_constraintStart_toStartOf="@id/password_edit_text"
         app:layout_constraintTop_toBottomOf="@id/email_edit_text"
         android:textSize="16sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:text="Password"
         android:id="@+id/password_text"
         android:layout_width="wrap_content"
@@ -79,11 +81,13 @@
         android:layout_marginHorizontal="24dp"
         app:layout_constraintTop_toBottomOf="@id/password_text"
         android:textColor="@color/black"
+        android:paddingStart="16dp"
+        android:backgroundTint="#EAEAEA"
         android:background="@drawable/edit_text_bg"
         android:id="@+id/password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:hint="  password" />
+        android:hint="password" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -106,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Dont have an account?"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/enter_btn"
         app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="@id/enter_btn"
