--- a/app/src/main/res/layout/screen_history.xml
+++ b/app/src/main/res/layout/screen_history.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toTopOf="@id/back" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_history"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
