--- a/app/src/main/res/drawable/headphones.xml
+++ b/app/src/main/res/drawable/headphones.xml
@@ -7,27 +7,27 @@
       android:pathData="M21,17V12C21,7.029 16.971,3 12,3C7.029,3 3,7.029 3,12V17"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#1C274C"/>
+      android:strokeColor="#E68E08"/>
   <path
       android:pathData="M22,15.5V17.5"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#1C274C"
+      android:strokeColor="#E68E08"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M2,15.5V17.5"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#1C274C"
+      android:strokeColor="#E68E08"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M8,13.845C8,13.08 8,12.698 7.825,12.432C7.737,12.299 7.621,12.188 7.484,12.109C7.214,11.953 6.848,11.99 6.117,12.062C4.885,12.183 4.269,12.244 3.827,12.576C3.604,12.745 3.416,12.959 3.276,13.207C3,13.696 3,14.34 3,15.628V17.193C3,18.469 3,19.106 3.282,19.599C3.388,19.783 3.52,19.949 3.674,20.091C4.087,20.471 4.688,20.59 5.892,20.827C6.739,20.994 7.163,21.078 7.476,20.902C7.591,20.837 7.693,20.749 7.776,20.643C8,20.357 8,19.908 8,19.01V13.845Z"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#1C274C"/>
+      android:strokeColor="#E68E08"/>
   <path
       android:pathData="M16,13.845C16,13.08 16,12.698 16.175,12.432C16.263,12.299 16.379,12.188 16.516,12.109C16.786,11.953 17.152,11.99 17.883,12.062C19.115,12.183 19.731,12.244 20.173,12.576C20.396,12.745 20.584,12.959 20.723,13.207C21,13.696 21,14.34 21,15.628V17.193C21,18.469 21,19.106 20.718,19.599C20.612,19.783 20.48,19.949 20.326,20.091C19.913,20.471 19.312,20.59 18.108,20.827C17.261,20.994 16.837,21.078 16.524,20.902C16.409,20.837 16.307,20.749 16.224,20.643C16,20.357 16,19.908 16,19.01V13.845Z"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#1C274C"/>
+      android:strokeColor="#E68E08"/>
 </vector>
