--- a/app/src/main/res/layout/screen_history.xml
+++ b/app/src/main/res/layout/screen_history.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="MissingDefaultResource">
+    tools:ignore="MissingDefaultResource"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/back"
@@ -32,6 +33,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_history"
         android:layout_width="match_parent"
+        android:layout_marginVertical="12dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@id/back"
